<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/setting_profile_cv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" >

            <Button
                android:id="@+id/setting_profile_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/setting_profile_skyblue"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/setting_profile_modify_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_modify"
            android:textSize="9sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/setting_profile_cv"
            app:layout_constraintStart_toStartOf="@id/setting_profile_cv"
            app:layout_constraintEnd_toEndOf="@id/setting_profile_cv" />

        <androidx.cardview.widget.CardView
            android:id="@+id/setting_profile_select_cv"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/setting_profile_cv"
            app:layout_constraintStart_toStartOf="@id/setting_profile_cv"
            android:visibility="gone"
            >

            <Button
                android:id="@+id/setting_profile_setting_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/setting_profile_gray"
                android:visibility="gone"
                />

        </androidx.cardview.widget.CardView>
            

        <LinearLayout
            android:id="@+id/setting_info_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            app:layout_constraintTop_toTopOf="@id/setting_profile_cv"
            app:layout_constraintStart_toEndOf="@id/setting_profile_cv">

            <LinearLayout
                android:id="@+id/setting_info_nickname_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/setting_info_nickname_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_ninkname"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/setting_info_stack_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_stack"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/setting_info_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_name"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/setting_info_email_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_email"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/setting_modify_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_myprofile_setting"
            android:textSize="9sp"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toBottomOf="@id/setting_profile_cv"
            app:layout_constraintEnd_toEndOf="parent"  />

         <TextView
             android:id="@+id/setting_announcement_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/setting_announcement"
             android:textColor="@color/setting_announcement"
             android:textSize="18sp"
             android:textStyle="bold"
             android:layout_marginTop="40dp"
             android:layout_marginLeft="30dp"
             app:layout_constraintTop_toBottomOf="@id/setting_modify_tv"
             app:layout_constraintStart_toStartOf="parent"  />

        <TextView
            android:id="@+id/setting_notice_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_notice"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/setting_announcement_tv"
            app:layout_constraintStart_toStartOf="@id/setting_announcement_tv"/>

        <TextView
            android:id="@+id/setting_inquiry_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_inquiry"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/setting_notice_tv"
            app:layout_constraintStart_toStartOf="@id/setting_announcement_tv" />

        <TextView
            android:id="@+id/setting_service_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_service"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/setting_inquiry_tv"
            app:layout_constraintStart_toStartOf="@id/setting_announcement_tv"  />

        <TextView
            android:id="@+id/setting_personal_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_personal_info"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/setting_service_tv"
            app:layout_constraintStart_toStartOf="@id/setting_announcement_tv"  />

        <TextView
            android:id="@+id/setting_version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_version"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/setting_personal_tv"
            app:layout_constraintStart_toStartOf="@id/setting_announcement_tv"  />

        <TextView
            android:id="@+id/setting_version_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_version_info"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/setting_version_tv"
            app:layout_constraintStart_toStartOf="@id/setting_announcement_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>