<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

    <Button
        android:id="@+id/signup_job_front_btn"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:text="@string/sign_up_job_front"
        android:textSize="11sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/community_job_select"
        android:padding="0dp"
        android:layout_marginRight="20dp"
        />

    <Button
        android:id="@+id/signup_job_back_btn"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:text="@string/sign_up_job_back"
        android:textSize="11sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/community_job"
        android:padding="0dp"
        android:layout_marginRight="20dp"
        />

    <Button
        android:id="@+id/signup_job_android_btn"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:text="@string/sign_up_job_android"
        android:textSize="11sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/community_job"
        android:padding="0dp"
        android:layout_marginRight="20dp"
        />

    <Button
        android:id="@+id/signup_job_ios_btn"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:text="@string/sign_up_job_ios"
        android:textSize="11sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/community_job"
        android:padding="0dp"
        />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>