<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/que_right_btn"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="다음"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/skyblue"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/que_text_01_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_question_01"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/que_right_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/que_text_02_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_question_02"
        android:textSize="20sp"
        android:textColor="@color/question_python"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/que_text_01_tv"
        app:layout_constraintStart_toStartOf="@id/que_text_01_tv"
        app:layout_constraintEnd_toEndOf="@id/que_text_01_tv"
        />

    <ImageView
        android:id="@+id/que_python_iv"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/question_python"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/que_text_02_tv"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/que_ans_01_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/string_ans_01"
        android:textColor="@color/black"
        android:backgroundTint="@color/question_gray"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/que_python_iv"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/que_ans_02_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/string_ans_02"
        android:textColor="@color/black"
        android:backgroundTint="@color/question_gray"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/que_ans_01_btn"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/que_ans_03_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/string_ans_03"
        android:textColor="@color/black"
        android:backgroundTint="@color/question_gray"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/que_ans_02_btn"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/que_ans_04_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/string_ans_04"
        android:textColor="@color/black"
        android:backgroundTint="@color/question_gray"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/que_ans_03_btn"
        app:layout_constraintStart_toStartOf="parent"
        />








</androidx.constraintlayout.widget.ConstraintLayout>