<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/free_hot_background_cv"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <Button
            android:id="@+id/free_hot_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/free_project_hot"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/free_hot_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_hot"
        android:textColor="@color/community_hot"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/free_hot_background_cv"
        app:layout_constraintTop_toTopOf="@id/free_hot_background_cv"/>

    <TextView
        android:id="@+id/free_hot_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_hot_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginLeft="40dp"
        app:layout_constraintTop_toTopOf="@id/free_hot_tv"
        app:layout_constraintStart_toEndOf="@id/free_hot_tv"/>

    <ImageView
        android:id="@+id/free_hot_album_iv"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/album"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@id/free_hot_title_tv"
        app:layout_constraintTop_toTopOf="@id/free_hot_title_tv" />

    <TextView
        android:id="@+id/free_hot_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_date"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="@id/free_hot_tv"
        app:layout_constraintBottom_toBottomOf="@id/free_hot_background_cv"/>

    <TextView
        android:id="@+id/free_hot_like_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_like_num"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="@id/free_hot_background_cv"
        app:layout_constraintEnd_toEndOf="@id/free_hot_background_cv"/>

    <ImageView
        android:id="@+id/free_hot_like_iv"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/like_skyblue"
        android:layout_marginRight="5dp"
        app:layout_constraintEnd_toStartOf="@id/free_hot_like_tv"
        app:layout_constraintTop_toTopOf="@id/free_hot_like_tv"
        app:layout_constraintBottom_toBottomOf="@id/free_hot_like_tv"/>

    <TextView
        android:id="@+id/free_hot_nickname_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_nickname"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginRight="40dp"
        app:layout_constraintTop_toTopOf="@id/free_hot_like_tv"
        app:layout_constraintEnd_toStartOf="@id/free_hot_like_iv"/>

</androidx.constraintlayout.widget.ConstraintLayout>