<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/free_project_title_cv"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/free_project_title_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/project_apply_skyblue"
            android:text="@string/project"
            android:textSize="12sp"
            android:textColor="@color/black" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/free_project_content_cv"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/free_project_title_cv"
        app:layout_constraintStart_toStartOf="@id/free_project_title_cv">

        <Button
            android:id="@+id/free_project_content_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/project_apply_content_skyblue" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/free_project_apply_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="@id/free_project_content_cv"
        app:layout_constraintStart_toStartOf="@id/free_project_content_cv"/>

    <TextView
        android:id="@+id/free_project_apply_num_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_num"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/free_project_apply_name_tv"
        app:layout_constraintStart_toStartOf="@id/free_project_apply_name_tv"/>

    <TextView
        android:id="@+id/free_project_apply_deadline_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_deadline"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/free_project_apply_num_tv"
        app:layout_constraintStart_toStartOf="@id/free_project_apply_name_tv"/>

    <TextView
        android:id="@+id/free_project_apply_content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_comment_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/free_project_apply_deadline_tv"
        app:layout_constraintStart_toStartOf="@id/free_project_apply_name_tv" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_project_comment"
        app:layout_constraintTop_toBottomOf="@id/free_project_content_cv"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>